tests/paczka1/small_fuzzy/45496739.err
Error in line 2: SpgusyrHGw S289 11,8
Error in line 1: 7FlwaDbgIvR A128 47,2
Error in line 4: Vub8NAy4 A84 47,7
